Start Day1 Part2
- [x] character sequence
- [x] exception flow control
- [x] list literal
- [x] multiline
- [x] Only read first and last digits
- [x] Refactor for loops
- [x] Optionals
- [ ] widen
- [ ] move line
- [ ] kill line
- [ ] camelhumps

Co-authored-by: Mark Crossfield <mark.crossfield@autotrader.co.uk>