@@ -1,10 +1,10 @@
 package aoc.day01;
 
 
+import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -66,14 +66,40 @@ public class Day01Test {
     }
 
     @Test
+    @Disabled
     public void testPart2(){
         // Given
-        List<String> input = Collections.singletonList("test");
+        List<String> input = List.of("two1nine", "eightwothree", "abcone2threexyz", "xtwone3four", "4nineeightseven2", "zoneight234", "7pqrstsixteen");
 
         // When
         String result = new Day01().part2(input);
 
         // Then
-        assertEquals(input.get(0), result);
+        assertEquals("281", result);
+    }
+
+    @Test
+    @Disabled
+    public void testPart2SingleLine() {
+        // Given
+        List<String> input = List.of("two1nine");
+
+        // When
+        String result = new Day01().part2(input);
+
+        // Then
+        assertEquals("29", result);
+    }
+
+    @Test
+    void convertsPartTwoInputToPartOneInput() {
+        // Given
+        List<String> input = List.of("two1nine");
+
+        // When
+        String result = new Day01().convertInput(input).getFirst();
+
+        // Then
+        assertEquals("219", result);
     }
 }
